force-app/main/default/objects/Openings_Productivity_Snapshot__c/Openings_Productivity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Used for Snapshot view from &apos;Openings Productivity Snapshot&apos; reports with Record Type Accounts with Opportunities and OPCs</description>
    <label>Openings Productivity Snapshot</label>
    <nameField>
        <label>Openings Productivity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Openings Productivity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>