force-app/main/default/objects/Openings_Productivity_Snapshot__c/fields/Created_By_OPC__c.field-meta.xml
<CustomField>
    <fullName>Created_By_OPC__c</fullName>
    <label>Created By (OPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>