force-app/main/default/objects/Openings_Productivity_Snapshot__c/fields/Opportunity_Recurring_OPC__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Recurring_OPC__c</fullName>
    <label>Opportunity Recurring (OPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>