force-app/main/default/objects/Openings_Productivity_Snapshot__c/fields/Type_OPC__c.field-meta.xml
<CustomField>
    <fullName>Type_OPC__c</fullName>
    <label>Type (OPC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>